added the footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </header>
     <footer>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus molestiae ab rem sapiente quae voluptates consequatur illum</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, optio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, excepturi.</p>
     </footer>
 </body>
 </html>
